Versao 1.6.0
2011-12-26
	- [BUG Fixed] Fix ciclic refer! It was entering in an inifinite loop.

Versao 1.5.3
2011-08-31
	- Informacoes adicionais no autocomplete agora é opcional.
	- Por default, o projeto nao adiciona a base de conectores nem cria o diretorio media. 
	
Versao 1.5.0
2010-03-19
	- Fechamento automático de elementos.
		Exemplo:
				<media id="">
				</media>
			Se o usuário editar no plugin uma barra fechando a TAG assim:
				<media id=""/>
				</media>
			O plugin some com o </media>, resultando em:
				<media id=""/>
				
	- Habilitado atalho (Ctrl+Q) para GotoLastEditPosition
	
	- Estrutura de sugestão de link corrigida (utilizando NCLContentHandler 
		agora)
		
	- Atualizado names de descriptorParam.  
	
2010-03-16
	- ALT+ARROW_LEFT e ALT+ARROW_RIGHT agora funcionando no mesmo arquivo. 
		(lucianocf)
	
2010-03-15 23:03
	- Ctrl+Shift+F resolvido sem modificar a ordem dos atributos. (lucianocf)
	
2010-03-03 01:21
	- Remocao da dependencia do GEF (temporariamente, enquanto a visao de layout	
		nao estah OK)
	
Versao 1.4.19
	- Sugestao de valores para os atributos "name" e "value" da tag 
		"descriptorParam"

Versao 1.4.10
	- Correcao do problema de ter que abrir de novo o editor para funcionar
	a edição de preferência das Preview's (OK)
	- Sugestão dos atributos default do elemento property
		- Tem q dar uma revisada, pq aqueles atributos default são apenas para
		objetos de mídia "settings".
		
	- Correção do tamanho do tooltip de texto
	- Opcao de validacao on time
	
	- ncl30-validator
		BUG: falso negativo para descriptorSwitch apontando para descriptor.
			- Resolvido! 

Versao 1.4.7
	- Alguma mudança causou problemas na sugestao de conteudo que estava em
	outro arquivo! Problema resolvido!
	
Versao 1.4.6
2009-11-18
	- Correcao da sugestao do refer (Incompleta)
	
Versao 1.4.3
2009-10-31
	- Validação de source de arquivos, ainda com bugs quando em espaço!
	
2009-11-01
	- Preferencia pra habilitar ou nao as previsualizações!
	
Versao 1.4.2