@@ -1,7 +1,12 @@
 Laboratory of Advanced Web Systems <www.laws.deinf.ufma.br>
 
-
 Developers:
+-------------------
+version 1.6.0
+-------------------
+Roberto Gerson de Albuquerque Azevedo <roberto@laws.deinf.ufma.br>
+Rodrigo Costa Mesquita Santos <rodrim.c@laws.deinf.ufma.br>
+
 -------------------
 version: 1.5.x
 -------------------
@@ -16,7 +21,6 @@ version: 1.4.x
 Roberto Gerson de Albuquerque Azevedo <roberto@laws.deinf.ufma.br>
 Rodrigo Costa Mesquita Santos <rodrim.c@laws.deinf.ufma.br>
 Thiago Alencar Gomes <thiago@laws.deinf.ufma.br>
-
 
 ------------------
 version: 1.0
